Added Lab Page View and Webcam WebView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Lab Broadcaster</string>
+    <string name="title_activity_view_lab">ViewLabActivity</string>
 </resources>
