--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">Lab Broadcaster</string>
     <string name="title_activity_view_lab">ViewLabActivity</string>
     <string name="title_activity_user_settings">Settings</string>
+
+    <string name="broadcast_setting">Broadcast Location</string>
+    <string name="broadcast_summary">Choose whether to broadcast your location when you are in a lab.</string>
+
+    <string name="status_setting">Current Status</string>
+    <string name="status_summary">Set whether you are looking for help or are willing to help others.</string>
 </resources>
