--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,8 @@
     <string name="status_summary">Set whether you are looking for help or are willing to help others.</string>
 
     <string-array name="courses">
-        <item >CS 110: Introduction to Computers</item>
+        <item >CS 110:
+                Introduction to Computers</item>
         <item >CS 158: C Programming</item>
         <item >CS 159: Programing Applications for Engineers</item>
         <item >CS 177: Programming with Multimedia Objects</item>
