Added recyclerview refresh, when app opens all data is refresh too, added refresh button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -197,11 +197,16 @@
         <item>5 minutes</item>
         <item>10 minutes</item>
         <item>15 minutes</item>
+        <item>Hourly</item>
+        <item>Manual</item>
     </string-array>
     <string-array name="timeschecked">
         <item>5 minutes-checked</item>
         <item>10 minutes-checked</item>
         <item>15 minutes-checked</item>
+        <item>hourly-checked</item>
+        <item>manual-checked</item>
+
     </string-array>
     <string-array name="empty_array"/>
 </resources>
